--- a/ios/BankApp/Info.plist
+++ b/ios/BankApp/Info.plist
@@ -53,19 +53,18 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Poppins Black.ttf</string>
-		<string>Poppins BoldItalic.ttf</string>
-		<string>Poppins ExtraBold Italic.ttf</string>
-		<string>Poppins ExtraBold.ttf</string>
-		<string>Poppins ExtraLight.ttf</string>
-		<string>Poppins Italic.ttf</string>
-		<string>Poppins Light.ttf</string>
-		<string>Poppins Medium Italic.ttf</string>
-		<string>Poppins Medium.ttf</string>
-		<string>Poppins Regular.ttf</string>
-		<string>Poppins SemiBold Italic.ttf</string>
-		<string>Poppins SemiBold.ttf</string>
-		<string>Poppins Thin.ttf</string>
+		<string>Poppins-Bold.ttf</string>
+		<string>Poppins-BoldItalic.ttf</string>
+		<string>Poppins-Italic.ttf</string>
+		<string>Poppins-Light.ttf</string>
+		<string>Poppins-LightItalic.ttf</string>
+		<string>Poppins-Medium.ttf</string>
+		<string>Poppins-MediumItalic.ttf</string>
+		<string>Poppins-Regular.ttf</string>
+		<string>Poppins-SemiBold.ttf</string>
+		<string>Poppins-SemiBoldItalic.ttf</string>
+		<string>Poppins-Thin.ttf</string>
+		<string>Poppins-ThinItalic.ttf</string>
 	</array>
 </dict>
 </plist>
