--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
     "@react-native-community/datetimepicker": "^7.6.1",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.6.0",
+    "formik": "^2.4.5",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-datepicker": "^1.7.2",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-mask-input": "^1.2.3",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-svg": "^13.14.0",
-    "react-native-svg-transformer": "^1.1.0"
+    "react-native-svg-transformer": "^1.1.0",
+    "react-native-vector-icons": "^10.0.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
