--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-native": "0.72.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-image-picker": "^7.0.2",
     "react-native-mask-input": "^1.2.3",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modalize": "^2.1.1",
+    "react-native-portalize": "^1.0.7",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-select-dropdown": "^3.4.0",
