--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-image-picker": "^7.0.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-mask-input": "^1.2.3",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modalize": "^2.1.1",
@@ -34,6 +35,7 @@
     "react-native-svg": "^13.14.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-vector-icons": "^10.0.1",
+    "styled-components": "^6.1.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
