--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.0",
     "formik": "^2.4.5",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-datepicker": "^1.7.2",
-    "react-native-gesture-handler": "^2.13.4",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^7.0.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-mask-input": "^1.2.3",
@@ -31,7 +32,7 @@
     "react-native-modalize": "^2.1.1",
     "react-native-portalize": "^1.0.7",
     "react-native-root-siblings": "^5.0.1",
-    "react-native-root-toast": "^3.5.1",
+    "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-select-dropdown": "^3.4.0",
